<?xml version="1.0"?>
<package format="2">

    <name>zeabus_sensor</name>
    <version>0.0.0</version>
    <description>This package is maintain and use by people who coding about sensor</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>zeabus_library</build_depend>
    <exec_depend>zeabus_library</exec_depend>

    <build_depend>zeabus_utility</build_depend>
    <exec_depend>zeabus_utility</exec_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

</package>
